--- a/Ibrahim.html
+++ b/Ibrahim.html
@@ -21,7 +21,7 @@
             </div>
             <nav>
                 <ul>
-                    <li>HOME</li>
+                    <li class="home" id="home">HOME</li>
                     <li>ABOUT US</li>
                     <li>CONTACT US</li>
                     <LI>FAQ</LI>
