Added CSS Dropdown Effect

--- a/Ibrahim.html
+++ b/Ibrahim.html
@@ -23,8 +23,15 @@
                 <ul>
                     <li class="home" id="home">HOME</li>
                     <li>ABOUT US</li>
-                    <li>CONTACT US</li>
-                    <LI>FAQ</LI>
+                    <div class="lis dropdown">
+                        <li>CONTACT US</li>
+                        <div class="drop_menus">
+                            <li>WHATSAPP</li>
+                            <li>LINKEDIN</li>
+                            <li>GMAIL</li>
+                        </div>
+                    </div>
+                    <LI class="lis">FAQ</LI>
                 </ul>
             </nav>
         </div>
